--- a/Herbal/AndroidManifest.xml
+++ b/Herbal/AndroidManifest.xml
@@ -22,19 +22,28 @@
             android:name="tw.edu.ntust.dt.herbal.MainActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+             <!-- <intent-filter>
+               <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
         </activity>
+        
         <activity
             android:name="tw.edu.ntust.dt.herbal.DashboardActivity"
             android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
         </activity>
+        
         <activity android:name="tw.edu.ntust.dt.herbal.MeasureActvitiy" >
         </activity>
 
+        <activity android:name="tw.edu.ntust.dt.herbal.ChartActivity" >
+            <intent-filter>
+               <action android:name="android.intent.action.MAIN" />
+               <category android:name="android.intent.category.LAUNCHER" />
+               </intent-filter>
+        </activity>
+        
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
