--- a/Herbal/AndroidManifest.xml
+++ b/Herbal/AndroidManifest.xml
@@ -19,18 +19,18 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="tw.edu.ntust.dt.herbal.MainActivity"
+            android:name="tw.edu.ntust.dt.herbal.LoginActivity"
             android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
+        </activity>
+        <activity
+            android:name="tw.edu.ntust.dt.herbal.DashboardActivity"
             android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="tw.edu.ntust.dt.herbal.DashboardActivity"
-            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
         </activity>
         <activity android:name="tw.edu.ntust.dt.herbal.MeasureActvitiy" >
         </activity>
