--- a/Herbal/AndroidManifest.xml
+++ b/Herbal/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.MyAppTheme" >
         <activity
             android:name="tw.edu.ntust.dt.herbal.LoginActivity"
             android:label="@string/app_name"
@@ -25,14 +25,16 @@
         </activity>
         <activity
             android:name="tw.edu.ntust.dt.herbal.DashboardActivity"
-            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
+            android:theme="@style/Theme.MyAppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="tw.edu.ntust.dt.herbal.MeasureActvitiy" >
+        <activity
+            android:name="tw.edu.ntust.dt.herbal.MeasureActvitiy"
+            android:theme="@style/Theme.MyAppTheme" >
         </activity>
 
         <meta-data
