--- a/Herbal/AndroidManifest.xml
+++ b/Herbal/AndroidManifest.xml
@@ -34,6 +34,27 @@
         </activity>
         <activity
             android:name="tw.edu.ntust.dt.herbal.MeasureActvitiy"
+            android:label="MEASURE"
+            android:theme="@style/Theme.MyAppTheme" >
+        </activity>
+        <activity
+            android:name="tw.edu.ntust.dt.herbal.ResultActivity"
+            android:label="RESULT"
+            android:theme="@style/Theme.MyAppTheme" >
+        </activity>
+        <activity
+            android:name="tw.edu.ntust.dt.herbal.HistoryActivity"
+            android:label="HISTORY"
+            android:theme="@style/Theme.MyAppTheme" >
+        </activity>
+        <activity
+            android:name="tw.edu.ntust.dt.herbal.SymptomActivity"
+            android:label="SYMPTOM"
+            android:theme="@style/Theme.MyAppTheme" >
+        </activity>
+        <activity
+            android:name="tw.edu.ntust.dt.herbal.ShopActivity"
+            android:label="HERBAL SHOP"
             android:theme="@style/Theme.MyAppTheme" >
         </activity>
 
