--- a/Herbal/AndroidManifest.xml
+++ b/Herbal/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.MyAppTheme" >
+        android:theme="@style/Theme.MyAppTheme"
+        android:largeHeap="true" >
         <activity
             android:name="tw.edu.ntust.dt.herbal.LoginActivity"
             android:label="@string/app_name"
