--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "facebook-android-sdk"]
 	path = facebook-android-sdk
-	url = git@github.com:facebook/facebook-android-sdk.git
+  url = git@github.com:facebook/facebook-android-sdk.git
+  ignore = dirty
