--- a/herbal2/AndroidManifest.xml
+++ b/herbal2/AndroidManifest.xml
@@ -13,14 +13,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen" >
-        <activity
-            android:name="tw.edu.ntust.dt.herbal2.CoverActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name="CoverActivity" >
         </activity>
         <activity android:name="AskActivity" >
         </activity>
@@ -31,6 +24,11 @@
         <activity android:name="RecipeActivity" >
         </activity>
         <activity android:name="ResultActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name="UploadActivity" >
         </activity>
