build more UI-flow structure, adding more static files

--- a/herbal2/AndroidManifest.xml
+++ b/herbal2/AndroidManifest.xml
@@ -12,10 +12,16 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen" >
         <activity android:name="CoverActivity" >
         </activity>
         <activity android:name="AskActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name="AllActivity" >
         </activity>
@@ -24,11 +30,6 @@
         <activity android:name="RecipeActivity" >
         </activity>
         <activity android:name="ResultActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name="UploadActivity" >
         </activity>
