--- a/herbal2/AndroidManifest.xml
+++ b/herbal2/AndroidManifest.xml
@@ -27,24 +27,24 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen" >
-        <activity android:name="CoverActivity" >
+        <activity android:name=".activity.CoverActivity" >
         </activity>
-        <activity android:name="AskActivity" >
+        <activity android:name=".activity.AskActivity" >
         </activity>
-        <activity android:name="AllActivity" >
+        <activity android:name=".activity.AllActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="DiscoverActivity" >
+        <activity android:name=".activity.DiscoverActivity" >
         </activity>
-        <activity android:name="RecipeActivity" >
+        <activity android:name=".activity.RecipeActivity" >
         </activity>
-        <activity android:name="ResultActivity" >
+        <activity android:name=".activity.ResultActivity" >
         </activity>
-        <activity android:name="UploadActivity" >
+        <activity android:name=".activity.UploadActivity" >
         </activity>
         <activity android:name="com.facebook.LoginActivity" />
 
